--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:nz7oVbLKb0gNFKMNo9jQcaG6/XI0hPPjjq7tNtELgcU=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=blog
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -45,4 +45,4 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-SANCTUM_STATEFUL_DOMAINS=localhost:3000
+SANCTUM_STATEFUL_DOMAINS=http://localhost:3000
